# RustSoliloquy

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: helper.rs  main.rs  ntlm.rs  soliloquy.rs  types.rs  utils.rs
src/win32/: advapi32.rs  allocator.rs  def.rs  gate.rs  k32.rs  ldrapi.rs  mod.rs  nocrt.rs  ntdll.rs  psapi.rs  sspicli.rs  winreg.rs
